move monet_options and getopt to common/options
Remove the last few entries from MonetDB/src/common, and put the
monet_options and getopt replacements in common/options where a
libmoptions is built that is used internally in the project only.  This
drops the mutils library that used to be available before.

--- a/MonetDB4/src/mapi/Makefile.ag
+++ b/MonetDB4/src/mapi/Makefile.ag
@@ -17,7 +17,7 @@
 
 INCLUDES = -I.. -I../monet \
 	   -I../modules/plain -I../modules/plain/stream \
-	   ../../../MonetDB/src/common ../../../common/stream ../../../MonetDB/src/gdk \
+	   ../../../common/options ../../../common/stream ../../../MonetDB/src/gdk \
 	   $(openssl_CFLAGS)
 
 MTSAFE
@@ -27,7 +27,7 @@ lib__mapi = {
 	DIR = libdir/MonetDB4
 	SOURCES = mapi.mx
 	#SCRIPTS = mil ""
-	LIBS =  ../../../MonetDB/src/common/libmutils \
+	LIBS =  ../../../common/options/libmoptions \
 		../../../common/stream/libstream \
 		../../../MonetDB/src/gdk/libbat \
 		../monet/libmonet \
