--- a/MonetDB5/src/extras/sphinx/Makefile.ag
+++ b/MonetDB5/src/extras/sphinx/Makefile.ag
@@ -16,7 +16,7 @@
 # All Rights Reserved.
 
 INCLUDES = ../../mal \
-		   ../../../../MonetDB/src/common \
+		   ../../../../common/options \
 		   ../../../../common/stream \
 		   ../../../../MonetDB/src/gdk \
 		   $(SPHINXCLIENT_CFLAGS)
