--- a/pathfinder/compiler/algebra/opt/Makefile.ag
+++ b/pathfinder/compiler/algebra/opt/Makefile.ag
@@ -32,7 +32,7 @@ SUBDIRS =
 
 INCLUDES = \
 	../../include \
-	../../../../MonetDB/src/common \
+	../../../../common/options \
 	../../../../MonetDB/src/gdk
 
 lib_opt = {
