--- a/pathfinder/compiler/utils/Makefile.ag
+++ b/pathfinder/compiler/utils/Makefile.ag
@@ -32,7 +32,7 @@
 
 INCLUDES = \
 	../include \
-	../../../MonetDB/src/common \
+	../../../common/options \
 	../../../MonetDB/src/gdk \
 	$(libxml2_CFLAGS)
 
