--- a/pathfinder/modules/pftijah/tjc/Makefile.ag
+++ b/pathfinder/modules/pftijah/tjc/Makefile.ag
@@ -35,7 +35,7 @@ INCLUDES = \
 	../../../../MonetDB4/src/modules/contrib \
 	../../../../MonetDB4/src/mapi \
 	../../../../MonetDB4/src/modules/calibrator \
-	../../../../MonetDB/src/common \
+	../../../../common/options \
 	../../../../common/stream \
 	../../../../MonetDB/src/gdk
 
