--- a/MonetDB5/src/modules/kernel/Makefile.ag
+++ b/MonetDB5/src/modules/kernel/Makefile.ag
@@ -16,7 +16,7 @@
 # All Rights Reserved.
 
 INCLUDES = \
-	../../mal ../atoms ../../../../MonetDB/src/common ../../../../common/stream ../../../../MonetDB/src/gdk $(HWCOUNTERS_INCS)
+	../../mal ../atoms ../../../../common/options ../../../../common/stream ../../../../MonetDB/src/gdk $(HWCOUNTERS_INCS)
 
 MTSAFE
 
