--- a/MonetDB5/src/optimizer/Makefile.ag
+++ b/MonetDB5/src/optimizer/Makefile.ag
@@ -17,7 +17,7 @@
 
 INCLUDES = -I../mal -I../modules/atoms -I../modules/mal -I../modules/kernel \
 	../../../clients/src/mapilib \
-	../../../MonetDB/src/common \
+	../../../common/options \
 	../../../common/stream \
 	../../../MonetDB/src/gdk
 
