--- a/MonetDB5/src/tools/Makefile.ag
+++ b/MonetDB5/src/tools/Makefile.ag
@@ -18,7 +18,7 @@
 MTSAFE
 INCLUDES = ../mal \
 	../../../clients/src/mapilib \
-	../../../MonetDB/src/common \
+	../../../common/options \
 	../../../common/stream \
 	../../../MonetDB/src/gdk \
 	$(openssl_CFLAGS) $(pcre_CFLAGS) $(libxml2_CFLAGS)
@@ -33,7 +33,7 @@ lib_monetdb5 = {
 	LIBS = ../mal/libmal ../modules/atoms/libatoms \
 		../modules/kernel/libkernel ../modules/mal/libmal \
 		../optimizer/liboptimizer ../scheduler/libscheduler \
-		../../../MonetDB/src/common/libmutils \
+		../../../common/options/libmoptions \
 		../../../MonetDB/src/gdk/libbat \
 		../../../common/stream/libstream \
 		../../../clients/src/mapilib/libMapi $(curl_LIBS) \
@@ -45,7 +45,7 @@ lib_monetdb5 = {
 bin_mserver5 = {
 	SOURCES = mserver5.mx monet_version.h monet_version.c.in
 	LIBS = libmonetdb5 @SHARED_LIBS@ \
-		../../../MonetDB/src/common/libmutils \
+		../../../common/options/libmoptions \
 		../../../MonetDB/src/gdk/libbat \
 		../../../common/stream/libstream \
 		$(SOCKET_LIBS) $(MALLOC_LIBS) $(PTHREAD_LIBS) $(DL_LIBS) \
@@ -55,7 +55,7 @@ bin_mserver5 = {
 lib_embeddedmal = {
 	SOURCES = embeddedclient.c.in
 	LIBS = libmonetdb5 @SHARED_LIBS@ \
-		../../../MonetDB/src/common/libmutils \
+		../../../common/options/libmoptions \
 		../../../MonetDB/src/gdk/libbat \
 		../../../common/stream/libstream \
 		../../../clients/src/mapilib/libMapi $(curl_LIBS) \
@@ -65,7 +65,7 @@ lib_embeddedmal = {
 bin_Mbeddedmal = {
 	SOURCES = prog.c
 	LIBS = libembeddedmal @SHARED_LIBS@ \
-		../../../MonetDB/src/common/libmutils \
+		../../../common/options/libmoptions \
 		../../../MonetDB/src/gdk/libbat \
 		../../../common/stream/libstream \
 		../../../clients/src/mapilib/libMapi $(curl_LIBS) \
