--- a/geom/src/monetdb5/Makefile.ag
+++ b/geom/src/monetdb5/Makefile.ag
@@ -16,7 +16,7 @@
 # All Rights Reserved.
 
 MTSAFE
-INCLUDES = ../../../MonetDB/src/common ../../../common/stream \
+INCLUDES = ../../../common/options ../../../common/stream \
 	../../../MonetDB/src/gdk \
 	../../../MonetDB5/src/modules/atoms \
 	../../../MonetDB5/src/compiler \
