--- a/pathfinder/compiler/core/Makefile.ag
+++ b/pathfinder/compiler/core/Makefile.ag
@@ -27,7 +27,7 @@
 # Rights Reserved.
 #
 
-INCLUDES = ../include ../../../MonetDB/src/common ../../../MonetDB/src/gdk
+INCLUDES = ../include ../../../common/options ../../../MonetDB/src/gdk
 
 lib_core = {
 	NOINST
