--- a/pathfinder/compiler/schema/Makefile.ag
+++ b/pathfinder/compiler/schema/Makefile.ag
@@ -27,7 +27,7 @@
 # Rights Reserved.
 #
 
-INCLUDES = ../include ../../../MonetDB/src/common ../../../MonetDB/src/gdk 
+INCLUDES = ../include ../../../common/options ../../../MonetDB/src/gdk 
 CFLAGS = $(libxml2_CFLAGS)
 
 lib_schema = {
