--- a/pathfinder/compiler/xmlimport/Makefile.ag
+++ b/pathfinder/compiler/xmlimport/Makefile.ag
@@ -29,7 +29,7 @@
 
 INCLUDES = \
 	../include \
-	../../../MonetDB/src/common \
+	../../../common/options \
 	../../../MonetDB/src/gdk \
 	$(libxml2_CFLAGS)
 
