--- a/sql/src/backends/monet5/merovingian/utils/Makefile.ag
+++ b/sql/src/backends/monet5/merovingian/utils/Makefile.ag
@@ -25,7 +25,7 @@ INCLUDES = \
 	../../../../../../MonetDB5/src/modules/mal \
 	../../../../../../MonetDB5/src/optimizer \
 	../../../../../../MonetDB5/src/scheduler \
-	../../../../../../MonetDB/src/common \
+	../../../../../../common/options \
 	../../../../../../MonetDB/src/gdk \
 	../../../../../../common/stream
 
