--- a/sql/src/common/Makefile.ag
+++ b/sql/src/common/Makefile.ag
@@ -18,7 +18,7 @@
 ## Process this file with automake to produce Makefile.in
 
 INCLUDES = .. ../include ../storage \
-	../../../MonetDB/src/common ../../../common/stream ../../../MonetDB/src/gdk
+	../../../common/options ../../../common/stream ../../../MonetDB/src/gdk
 
 lib_sqlcommon = {
 	NOINST
