--- a/sql/src/server/Makefile.ag
+++ b/sql/src/server/Makefile.ag
@@ -19,7 +19,7 @@
 
 INCLUDES = ../include ../common ../storage \
 	../../../clients/src/mapilib \
-	../../../MonetDB/src/common ../../../common/stream ../../../MonetDB/src/gdk
+	../../../common/options ../../../common/stream ../../../MonetDB/src/gdk
 
 YFLAGS = -d -p sql
 
