--- a/sql/src/storage/Makefile.ag
+++ b/sql/src/storage/Makefile.ag
@@ -25,7 +25,7 @@ EXTRA_DIST = sql_storage.h store_connections.h store_dependency.h \
 SUBDIRS = bat restrict m4 bpm 
 
 INCLUDES = ../include ../common \
-		   ../../../MonetDB/src/common ../../../common/stream \
+		   ../../../common/options ../../../common/stream \
 		   ../../../MonetDB/src/gdk
 
 lib_store = {
