--- a/sql/src/storage/m4/Makefile.ag
+++ b/sql/src/storage/m4/Makefile.ag
@@ -18,7 +18,7 @@
 ## Process this file with automake to produce Makefile.in
 
 INCLUDES = .. ../../include ../../common \
-	../../../../MonetDB/src/common ../../../../common/stream \
+	../../../../common/options ../../../../common/stream \
 	../../../../MonetDB/src/gdk
 
 lib_m4store = {
