--- a/sql/src/storage/restrict/Makefile.ag
+++ b/sql/src/storage/restrict/Makefile.ag
@@ -18,7 +18,7 @@
 ## Process this file with automake to produce Makefile.in
 
 INCLUDES = .. ../../include ../../common ../bat \
-	../../../../MonetDB/src/common ../../../../common/stream \
+	../../../../common/options ../../../../common/stream \
 	../../../../MonetDB/src/gdk
 
 lib_restrictstore = {
