--- a/clients/src/mapilib/monetdb-mapi.pc.in
+++ b/clients/src/mapilib/monetdb-mapi.pc.in
@@ -7,5 +7,5 @@ Name: monetdb-mapi
 Description: MonetDB MAPI C-client libary
 Version: @PACKAGE_VERSION@
 
-Libs: -L${libdir} -lMapi 
-Cflags: -I${includedir}/MonetDB/mapilib
+Libs: -L${libdir} -lmapi 
+Cflags: -I${includedir}/monetdb
