--- a/clients/src/examples/C/Makefile.ag
+++ b/clients/src/examples/C/Makefile.ag
@@ -16,7 +16,7 @@
 # All Rights Reserved.
 
 MTSAFE
-INCLUDES = ../.. ../../../../common/options $(READLINE_INCS)
+INCLUDES = ../../mapilib ../../../../common/options $(READLINE_INCS)
 
 MAPI_LIBS = $(SOCKET_LIBS) 
 
@@ -24,7 +24,7 @@ BINS = {
 	DIR = libdir/MonetDB/Tests
 	SOURCES = sample0.c sample1.c sample2.c sample3.c sample4.c \
 		smack00.c  smack01.c
-	LIBS = $(MAPI_LIBS) ../../mapilib/libMapi \
+	LIBS = $(MAPI_LIBS) ../../mapilib/libmapi \
 		../../../../common/options/libmoptions \
 		$(curl_LIBS)
 }
